# etui

./: README.md  build-release-gh.sh  build.sh  clean.sh  dev-install.sh  etui.spec  install-dev-deps.sh  install_and_run.sh  pdm-configh.sh  pdm-use-venv.sh  pyproject.toml  run-debug.sh  run.sh  run_module.sh  test.sh
.github/workflows/: ci.yml  package.yml
doc/: architecture.md  code_review.md  console-xonsh.md  issues.md  packaging_and_installation.md  tab-plugin-ocr.md
etui/: README.md  bus.py  bus_contract.py  contracts.py  main.py  plugin.py  plugin_kit.py  plugins.py  pyproject.toml  self_test.py  settings.py  version.py
etui/dev/: __init__.py  run_plugin.py
etui/doc/: index.md  opensource.md
etui/doc/probes/: cmsis-dap.md  lpc-link2.md  raspberry-pi-debug.md  stlink.md  xds110.md
etui/doc/tabs/: about.md  cmake.md  console.md  files.md  git.md  github.md  help.md  lldb.md  plugins.md  probe.md  serial.md  settings.md  theme.md  tools.md  venv.md
etui/tabs/: __init__.py  about.py  cmake.py  console.py  debugger.py  files.py  git.py  github.py  help.py  lldb.py  plugin_manager.py  probe.py  serial.py  settings.py  theme.py  tools.py  venv.py  workflow.py
etui/workflow/: __init__.py  engine.py  loader.py  safety.py  schema.py
etui/workflows/: zephyr_getting_started.yaml
plugins/etui-cmake/: pyproject.toml
plugins/etui-cmake/etui_cmake/: __init__.py  plugin.py  tab.py
plugins/etui-cmake/tests/: test_tab.py
plugins/etui-git/: pyproject.toml
plugins/etui-git/etui_git/: __init__.py  plugin.py  tab.py
plugins/etui-git/tests/: test_tab.py
plugins/etui-github/: pyproject.toml
plugins/etui-github/etui_github/: __init__.py  plugin.py  tab.py
plugins/etui-github/tests/: test_tab.py
plugins/etui-lldb/: pyproject.toml
plugins/etui-lldb/etui_lldb/: __init__.py  plugin.py  tab.py
plugins/etui-lldb/tests/: test_tab.py
plugins/etui-plugin-manager/: pyproject.toml
plugins/etui-plugin-manager/etui_plugin_manager/: __init__.py  plugin.py  tab.py
plugins/etui-plugin-manager/tests/: test_tab.py
plugins/etui-probe/: pyproject.toml
plugins/etui-probe/etui_probe/: __init__.py  plugin.py  tab.py
plugins/etui-probe/tests/: test_tab.py
plugins/etui-serial/: pyproject.toml
plugins/etui-serial/etui_serial/: __init__.py  plugin.py  tab.py
plugins/etui-serial/tests/: test_tab.py
plugins/etui-tools/: pyproject.toml
plugins/etui-tools/etui_tools/: __init__.py  plugin.py  tab.py
plugins/etui-tools/tests/: test_tab.py
plugins/etui-venv/: pyproject.toml
plugins/etui-venv/etui_venv/: __init__.py  plugin.py  tab.py
plugins/etui-venv/tests/: test_tab.py
plugins/etui-workflow/: pyproject.toml
plugins/etui-workflow/etui_workflow/: __init__.py  engine.py  loader.py  plugin.py  tab.py
plugins/etui-workflow/etui_workflow/workflows/: hello_world.yaml  zephyr_getting_started.yaml
plugins/etui-workflow/tests/: test_tab.py
tests/: test_about.py  test_bus.py  test_cmake_tab.py  test_console.py  test_files_markdown.py  test_git_tab.py  test_github_tab.py  test_lldb_tab.py  test_plugin_manager_tab.py  test_plugins.py  test_probe_tab.py  test_settings.py  test_tools_tab.py  test_venv_tab.py  test_workflow_tab.py  test_workspace.py
