[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "etui"
version = "0.2.0"
description = "Terminal-based IDE for embedded firmware development"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Pawel Wodnicki", email = "hbbrbasic@gmail.com" },
]
keywords = ["embedded", "tui", "debugger", "firmware", "arm", "pyocd", "lldb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Terminals",
]
requires-python = ">=3.13,<3.15"
dependencies = [
    "textual>=8.1.1",
    "pyocd>=0.44.1",
    "pyserial>=3.5",
    "pygments>=2.17.0",
    "xonsh>=0.18.3",
    "packaging>=22.0",
    "pyyaml>=6.0.3",
]

[project.urls]
Repository = "https://github.com/32bitmicroLLC/EmbeddedTUI"

[project.scripts]
etui = "etui.main:main"

[tool.pdm.build]
includes = ["etui/"]

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
    "pyinstaller>=6.10",
    "pytest>=9.0.3",
]
