[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "etui"
version = "0.3.0"
description = "Terminal-based IDE for embedded firmware development"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Pawel Wodnicki", email = "hbbrbasic@gmail.com" },
]
keywords = ["embedded", "tui", "debugger", "firmware", "arm","cmake", "git", "github", "debugger", "pyocd", "lldb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Terminals",
]
requires-python = ">=3.13,<3.15"
dependencies = [
    "textual>=8.1.1",
    "pyocd>=0.44.1",
    "pyserial>=3.5",
    "pygments>=2.17.0",
    "xonsh>=0.18.3",
    "packaging>=22.0",
    "pyyaml>=6.0.3",
    "pyte>=0.8.2",
]

# Optional, independently-released tab plugins. These are local sibling path
# deps for development only — they are NOT part of the core runtime requirements,
# so the release/package build (CI) does not need the sibling checkouts present.
# Install locally with:  pdm install -G plugins   (or `pdm add ./etui_mqtt ...`).
[project.optional-dependencies]
default-tabs = [
    "etui-tools @ file:///${PROJECT_ROOT}/plugins/etui-tools",
    "etui-venv @ file:///${PROJECT_ROOT}/plugins/etui-venv",
]
plugins = [
    "etui-mqtt @ file:///${PROJECT_ROOT}/../etui_mqtt",
    "etui-email @ file:///${PROJECT_ROOT}/../etui_email",
]

[project.urls]
Repository = "https://github.com/32bitmicroLLC/EmbeddedTUI"

[project.scripts]
etui = "etui.main:main"
etui-run-plugin = "etui.dev.run_plugin:main"

[tool.pdm.build]
includes = ["etui/"]

[tool.pdm.workspace]
members = [
    "plugins/*",
]

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
    "pyinstaller>=6.10",
    "pytest>=9.0.3",
]
