[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "etui"
version = "0.5.0"
description = "Terminal-based IDE for embedded firmware development"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Pawel Wodnicki", email = "hbbrbasic@gmail.com" },
]
keywords = ["embedded", "tui", "debugger", "firmware", "arm","cmake", "git", "github", "debugger", "pyocd", "lldb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Terminals",
]
requires-python = ">=3.13,<3.15"
dependencies = [
    "textual>=8.1.1",
    "pygments>=2.17.0",
    "xonsh>=0.18.3",
    "pyyaml>=6.0.3",
    "pyte>=0.8.2",
]

# First-party tab plugins bundled with a default release, as in-repo path deps.
# Install with:  pdm install -G default-tabs  (also used by the release build).
# Third-party plugins (etui-mqtt, etui-email, etui-gh, ...) live in their own
# repos and are installed separately, not via this project's extras.
[project.optional-dependencies]
default-tabs = [
    "etui-tools @ file:///${PROJECT_ROOT}/plugins/etui-tools",
    "etui-cmake @ file:///${PROJECT_ROOT}/plugins/etui-cmake",
    "etui-workflow @ file:///${PROJECT_ROOT}/plugins/etui-workflow",
    "etui-serial @ file:///${PROJECT_ROOT}/plugins/etui-serial",
    "etui-github @ file:///${PROJECT_ROOT}/plugins/etui-github",
    "etui-git @ file:///${PROJECT_ROOT}/plugins/etui-git",
    "etui-probe @ file:///${PROJECT_ROOT}/plugins/etui-probe",
    "etui-lldb @ file:///${PROJECT_ROOT}/plugins/etui-lldb",
]

[project.urls]
Repository = "https://github.com/32bitmicroLLC/EmbeddedTUI"

[project.scripts]
etui = "etui.main:main"
etui-run-plugin = "etui.dev.run_plugin:main"

[tool.pdm.build]
includes = ["etui/"]

[tool.pdm.workspace]
members = [
    "plugins/*",
]

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
    "pyinstaller>=6.10",
    "pytest>=9.0.3",
]
