[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "etui-lldb"
version = "0.1.0"
description = "LLDB Tab Plugin for etui"
requires-python = ">=3.13,<3.15"
dependencies = [
    "etui>=0.3.0",
    "textual>=8.1.1",
]

[project.entry-points."etui.tabs"]
lldb = "etui_lldb:LldbTabPlugin"

[tool.pdm.build]
includes = ["etui_lldb/"]
