[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "etui-plugin-manager"
version = "0.1.0"
description = "Plugin Manager Tab Plugin for etui"
requires-python = ">=3.13,<3.15"
dependencies = [
    "etui>=0.4.0",
    "textual>=8.1.1",
]

[project.entry-points."etui.tabs"]
plugin-manager = "etui_plugin_manager:PluginManagerTabPlugin"

[tool.pdm.build]
includes = ["etui_plugin_manager/"]
