[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "etui-tools"
version = "0.1.0"
description = "Development Tools Manager Tab Plugin for etui"
requires-python = ">=3.13,<3.15"
dependencies = [
    "etui>=0.3.0",
    "textual>=8.1.1",
]

[project.entry-points."etui.tabs"]
tools = "etui_tools:ToolsTabPlugin"

[tool.pdm.build]
includes = ["etui_tools/"]
